--- a/src/locales/sk.json
+++ b/src/locales/sk.json
@@ -295,5 +295,59 @@
       "deleteTitle": "Vymazať všetky dáta",
       "deleteDescription": "Trvalo vymazať všetky vaše šablóny a priečinky, pričom si zachováte aktívny profil."
     }
+  },
+  "folders": {
+    "title": "Priečinky",
+    "allTemplates": "Všetky šablóny",
+    "favorites": "Obľúbené",
+    "recent": "Nedávne",
+    "newFolder": "Nový priečinok",
+    "searchPlaceholder": "Hľadať priečinky...",
+    "noFolders": "Zatiaľ žiadne priečinky",
+    "createFirst": "Vytvorte prvý priečinok pre organizáciu šablón",
+    "expand": "Rozbaliť priečinok",
+    "collapse": "Zbaliť priečinok",
+    "expandAll": "Rozbaliť všetko",
+    "collapseAll": "Zbaliť všetko",
+    "createFolder": "Vytvoriť priečinok",
+    "createNewFolder": "Vytvoriť nový priečinok",
+    "cancelNewFolder": "Zrušiť vytvorenie",
+    "createSubfolder": "Vytvoriť podpriečinok",
+    "renameFolder": "Premenovať priečinok",
+    "deleteFolder": "Zmazať priečinok",
+    "deleteFiles": "Zmazať súbory",
+    "deleteFilesConfirm": "Zmazať súbory z \"{{name}}\"?",
+    "deleteFilesDetail": "Toto trvalo zmaže {{count}} šablón(y), ale ponechá priečinok.",
+    "filesDeleted": "{{count}} súbor(ov) úspešne zmazaných",
+    "noFilesToDelete": "Žiadne súbory na zmazanie v tomto priečinku",
+    "deleteFilesFailed": "Nepodarilo sa zmazať súbory",
+    "folderName": "Názov priečinka",
+    "parentFolder": "Rodičovský priečinok",
+    "enterFolderName": "Zadajte názov priečinka...",
+    "rootFolder": "Koreň (Všetky šablóny)",
+    "folderCreated": "Priečinok \"{{name}}\" úspešne vytvorený",
+    "folderRenamed": "Priečinok premenovaný na \"{{name}}\"",
+    "folderDeleted": "Priečinok \"{{name}}\" zmazaný",
+    "deleteFolderConfirm": "Zmazať \"{{name}}\" a celý jeho obsah?",
+    "deleteFolderDetail": "Toto trvalo zmaže {{count}} šablón(y).",
+    "cannotUndo": "Túto akciu nie je možné vrátiť späť.",
+    "maxDepthReached": "Dosiahnutá maximálna hĺbka priečinkov (2 úrovne)",
+    "invalidFolderName": "Neplatný názov priečinka",
+    "folderNameTooLong": "Názov priečinka je príliš dlhý (max 50 znakov)",
+    "folderNameEmpty": "Názov priečinka nemôže byť prázdny",
+    "folderExists": "Priečinok s týmto názvom už existuje",
+    "noSpecialChars": "Špeciálne znaky nie sú povolené: /\\:*?\"<>|",
+    "actions": "Akcie priečinka",
+    "uploadToFolder": "Nahrať do priečinka",
+    "sortAZ": "Zoradiť A-Z",
+    "sortZA": "Zoradiť Z-A",
+    "creating": "Vytvára sa...",
+    "renaming": "Premenováva sa...",
+    "deleting": "Maže sa...",
+    "loadFailed": "Nepodarilo sa načítať priečinky",
+    "createFailed": "Nepodarilo sa vytvoriť priečinok",
+    "renameFailed": "Nepodarilo sa premenovať priečinok",
+    "deleteFailed": "Nepodarilo sa zmazať priečinok",
+    "closeMenu": "Zavrieť menu"
   }
 }
